# handler/user.go
@@ -1,254 +1,0 @@
-package handler
-
-import (
-	"net/http"
-
-	"github.com/hamed-lohi/user-management/model"
-	"github.com/hamed-lohi/user-management/utils"
-	"github.com/labstack/echo/v4"
-	"go.mongodb.org/mongo-driver/bson/primitive"
-)
-
-// Login godoc
-// @Summary Login for existing user
-// @Description Login for existing user
-// @ID login
-// @Tags user
-// @Accept  json
-// @Produce  json
-// @Param user body userLoginRequest true "Credentials to use"
-// @Success 200 {object} userResponse
-// @Failure 400 {object} utils.Error
-// @Failure 401 {object} utils.Error
-// @Failure 422 {object} utils.Error
-// @Failure 404 {object} utils.Error
-// @Failure 500 {object} utils.Error
-// @Router /users/login [post]
-func (h *Handler) Login(c echo.Context) error {
-	req := &userLoginRequest{}
-	if err := req.bind(c); err != nil {
-		return c.JSON(http.StatusUnprocessableEntity, utils.NewError(err))
-	}
-	u, err := h.userStore.GetByEmail(req.User.Email)
-	if err != nil {
-		return c.JSON(http.StatusInternalServerError, utils.NewError(err))
-	}
-	if u == nil {
-		return c.JSON(http.StatusForbidden, utils.AccessForbidden())
-	}
-	if !u.CheckPassword(req.User.Password) {
-		return c.JSON(http.StatusForbidden, utils.AccessForbidden())
-	}
-	return c.JSON(http.StatusOK, newUserResponse(u, true))
-}
-
-// SignUp godoc
-// @Summary Register a new user
-// @Description Register a new user
-// @ID sign-up
-// @Tags user
-// @Accept  json
-// @Produce  json
-// @Param user body userRegisterRequest true "User info for registration"
-// @Success 201 {object} userResponse
-// @Failure 400 {object} utils.Error
-// @Failure 404 {object} utils.Error
-// @Failure 500 {object} utils.Error
-// @Router /users [post]
-func (h *Handler) SignUp(c echo.Context) error {
-	var u model.User
-	req := &userRegisterRequest{}
-	if err := req.bind(c, &u); err != nil {
-		return c.JSON(http.StatusUnprocessableEntity, utils.NewError(err))
-	}
-	u.Roles = []model.Role{model.Guest}
-	if err := h.userStore.Create(&u); err != nil {
-		return c.JSON(http.StatusUnprocessableEntity, utils.NewError(err))
-	}
-	return c.JSON(http.StatusCreated, newUserResponse(&u, true))
-}
-
-// SignUp godoc
-// @Summary Add new user
-// @Description Add new user
-// @ID add-user
-// @Tags user
-// @Accept  json
-// @Produce  json
-// @Param user body userRegisterRequest true "User info for registration"
-// @Success 201 {object} userResponse
-// @Failure 400 {object} utils.Error
-// @Failure 404 {object} utils.Error
-// @Failure 500 {object} utils.Error
-// @Security ApiKeyAuth
-// @Router /user [post]
-func (h *Handler) InsertUser(c echo.Context) error {
-	var u model.User
-	req := &userInsertRequest{}
-	if err := req.bind(c, &u); err != nil {
-		return c.JSON(http.StatusUnprocessableEntity, utils.NewError(err))
-	}
-	if err := h.userStore.Create(&u); err != nil {
-		return c.JSON(http.StatusUnprocessableEntity, utils.NewError(err))
-	}
-	return c.JSON(http.StatusCreated, newUserResponse(&u, false))
-}
-
-// UpdateProfile godoc
-// @Summary Update profile
-// @Description Update user information for current user
-// @ID update-profile
-// @Tags user
-// @Accept  json
-// @Produce  json
-// @Param user body userUpdateRequest true "User details to update. At least **one** field is required."
-// @Success 200 {object} userResponse
-// @Failure 400 {object} utils.Error
-// @Failure 401 {object} utils.Error
-// @Failure 422 {object} utils.Error
-// @Failure 404 {object} utils.Error
-// @Failure 500 {object} utils.Error
-// @Security ApiKeyAuth
-// @Router /user [put]
-func (h *Handler) UpdateProfile(c echo.Context) error {
-	u, err := h.userStore.GetByID(userIDFromToken(c))
-	if err != nil {
-		return c.JSON(http.StatusInternalServerError, utils.NewError(err))
-	}
-
-	return h.updateUser(c, u)
-}
-
-// UpdateUser godoc
-// @Summary Update current user
-// @Description Update user information for current user
-// @ID update-user
-// @Tags user
-// @Accept  json
-// @Produce  json
-// @Param        id   path      string  true  "User ID"
-// @Param user body userUpdateRequest true "User details to update. At least **one** field is required."
-// @Success 200 {object} userResponse
-// @Failure 400 {object} utils.Error
-// @Failure 401 {object} utils.Error
-// @Failure 422 {object} utils.Error
-// @Failure 404 {object} utils.Error
-// @Failure 500 {object} utils.Error
-// @Security ApiKeyAuth
-// @Router /user/{id} [put]
-func (h *Handler) UpdateUser(c echo.Context) error {
-
-	objId, err := primitive.ObjectIDFromHex(c.Param("id"))
-	if err != nil {
-		return c.JSON(http.StatusInternalServerError, utils.NewError(err))
-	}
-	u, err := h.userStore.GetByID(objId)
-	if err != nil {
-		return c.JSON(http.StatusInternalServerError, utils.NewError(err))
-	}
-
-	return h.updateUser(c, u)
-}
-
-func (h *Handler) updateUser(c echo.Context, u *model.User) error {
-
-	if u == nil {
-		return c.JSON(http.StatusNotFound, utils.NotFound())
-	}
-	req := newUserUpdateRequest()
-	req.populate(u)
-	if err := req.bind(c, u); err != nil {
-		return c.JSON(http.StatusUnprocessableEntity, utils.NewError(err))
-	}
-	if err := h.userStore.Update(u); err != nil {
-		return c.JSON(http.StatusUnprocessableEntity, utils.NewError(err))
-	}
-	return c.JSON(http.StatusOK, newUserResponse(u, false))
-}
-
-// DeleteUser godoc
-// @Summary Delete a user
-// @Description Delete a user
-// @ID delete-user
-// @Tags user
-// @Accept  json
-// @Produce  json
-// @Param        id   path      string  true  "User ID"
-// @Success 201 {object} userResponse
-// @Failure 400 {object} utils.Error
-// @Failure 404 {object} utils.Error
-// @Failure 500 {object} utils.Error
-// @Security ApiKeyAuth
-// @Router /user/{id} [delete]
-func (h *Handler) DeleteUser(c echo.Context) error {
-	//id := []byte(c.Param("id"))
-	objId, _ := primitive.ObjectIDFromHex(c.Param("id"))
-	var u model.User
-	if err := h.userStore.Delete(objId); err != nil {
-		return c.JSON(http.StatusUnprocessableEntity, utils.NewError(err))
-	}
-	return c.JSON(http.StatusOK, newUserResponse(&u, false))
-}
-
-// CurrentUser godoc
-// @Summary Get the current user
-// @Description Gets the currently logged-in user
-// @ID current-user
-// @Tags user
-// @Accept  json
-// @Produce  json
-// @Success 200 {object} userResponse
-// @Failure 400 {object} utils.Error
-// @Failure 401 {object} utils.Error
-// @Failure 422 {object} utils.Error
-// @Failure 404 {object} utils.Error
-// @Failure 500 {object} utils.Error
-// @Security ApiKeyAuth
-// @Router /user/info [get]
-func (h *Handler) CurrentUser(c echo.Context) error {
-
-	u, err := h.userStore.GetByID(userIDFromToken(c))
-	if err != nil {
-		return c.JSON(http.StatusInternalServerError, utils.NewError(err))
-	}
-	if u == nil {
-		return c.JSON(http.StatusNotFound, utils.NotFound())
-	}
-	return c.JSON(http.StatusOK, newUserResponse(u, false))
-}
-
-// UserList godoc
-// @Summary Users list
-// @Description Users list for Admin
-// @ID list-user
-// @Tags user
-// @Accept  json
-// @Produce  json
-// @Success 200 {object} []model.User
-// @Failure 400 {object} utils.Error
-// @Failure 401 {object} utils.Error
-// @Failure 422 {object} utils.Error
-// @Failure 404 {object} utils.Error
-// @Failure 500 {object} utils.Error
-// @Security ApiKeyAuth
-// @Router /user [get]
-func (h *Handler) ListUser(c echo.Context) error {
-	users, err := h.userStore.GetUserList()
-	if err != nil {
-		return c.JSON(http.StatusInternalServerError, utils.NewError(err))
-	}
-	if users == nil {
-		return c.JSON(http.StatusNotFound, utils.NotFound())
-	}
-	return c.JSON(http.StatusOK, newUserListResponse(*users))
-}
-
-func userIDFromToken(c echo.Context) primitive.ObjectID {
-
-	objId, ok := c.Get("user").(primitive.ObjectID)
-	if !ok {
-		// log.Fatal(err)
-		return primitive.ObjectID{}
-	}
-	return objId
-}
