# main.go
@@ -1,15 +1,8 @@
 package main
 
 import (
-	"github.com/labstack/gommon/log"
-
-	echoSwagger "github.com/swaggo/echo-swagger"
-
-	"github.com/hamed-lohi/user-management/db"
-	_ "github.com/hamed-lohi/user-management/docs" // docs is generated by Swag CLI, you have to import it.
-	"github.com/hamed-lohi/user-management/handler"
-	"github.com/hamed-lohi/user-management/middleware"
-	"github.com/hamed-lohi/user-management/store"
+	_ "github.com/hamed-lohi/user-manage/docs" // docs is generated by Swag CLI, you have to import it.
+	"github.com/hamed-lohi/user-manage/initialize"
 )
 
 // @title Swagger Example API
@@ -30,27 +23,6 @@ import (
 
 func main() {
 
-	e := middleware.NewEcho()
-	e.Logger.SetLevel(log.DEBUG)
-
-	// // Group level middleware
-	// g := e.Group("/admin")
-	// g.Use(middleware.BasicAuth(func(username, password string, c echo.Context) (bool, error) {
-	// if username == "joe" && password == "secret" {
-	// 	return true, nil
-	// }
-	// return false, nil
-	// }))
-
-	e.GET("/swagger/*", echoSwagger.WrapHandler)
-
-	v1 := e.Group("/api")
-
-	dp := db.New()
-
-	us := store.NewUserStore(dp)
-	h := handler.NewHandler(us)
-	h.Register(v1)
-	e.Logger.Fatal(e.Start("127.0.0.1:8585"))
+	initialize.InitializeWebServer()
 
 }
